--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
     "@tailwindcss/postcss": "4.0.1",
     "@types/bcryptjs": "2.4.6",
     "@vercel/postgres": "0.10.0",
-    "@vercel/speed-insights": "^1.1.0",
-    "bcryptjs": "2.4.3",
+    "bcryptjs": "^2.4.3",
     "clsx": "2.1.1",
     "next": "15.1.6",
     "next-auth": "5.0.0-beta.25",
