--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "@heroicons/react": "2.2.0",
+    "@svgr/webpack": "^8.1.0",
     "@tailwindcss/forms": "0.5.10",
     "@tailwindcss/postcss": "4.0.1",
     "@types/bcryptjs": "2.4.6",
