--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "@types/bcryptjs": "2.4.6",
     "@vercel/postgres": "^0.10.0",
     "bcrypt": "^5.1.1",
-    "bcryptjs": "^2.4.3",
     "clsx": "2.1.1",
+    "crypto": "^1.0.1",
     "next": "15.1.6",
     "next-auth": "^5.0.0-beta.25",
     "postcss": "8.5.1",
