--- a/package.json
+++ b/package.json
@@ -7,16 +7,15 @@
   },
   "dependencies": {
     "@heroicons/react": "2.2.0",
-    "@svgr/webpack": "^8.1.0",
     "@tailwindcss/forms": "0.5.10",
     "@tailwindcss/postcss": "4.0.1",
     "@types/bcryptjs": "2.4.6",
-    "@vercel/postgres": "^0.10.0",
+    "@vercel/postgres": "0.10.0",
     "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "clsx": "2.1.1",
-    "crypto": "^1.0.1",
     "next": "15.1.6",
-    "next-auth": "^5.0.0-beta.25",
+    "next-auth": "5.0.0-beta.25",
     "postcss": "8.5.1",
     "react": "19.0.0",
     "react-dom": "19.0.0",
